After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739038 - gtk_recent_manager_set_filename: assertion failed: (priv->filename != NULL)
gtk_recent_manager_set_filename: assertion failed: (priv->filename != NULL)
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Class: GtkRecent
3.10.x
Other Linux
: Normal critical
: ---
Assigned To: gtk-bugs
Emmanuele Bassi (:ebassi)
Depends on:
Blocks:
 
 
Reported: 2014-10-22 21:38 UTC by Alexander Koeppe
Modified: 2014-12-24 23:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
little test program just launching a FileChooserDialog (546 bytes, text/plain)
2014-10-22 21:38 UTC, Alexander Koeppe
Details

Description Alexander Koeppe 2014-10-22 21:38:34 UTC
Created attachment 289174 [details]
little test program just launching a FileChooserDialog

Since the latest update under Ubuntu to libgtk-3 version 3.10.8, a GTK application fails when using gtk_file_chooser_dialog() and the homedirectory referenced by the $HOME environment variable is not readable.
This can easily be reproduced by calling the attached little test program by the following command line as a normal user:

$ HOME=/root ./hello-world 

(hello-world:4704): Gtk-CRITICAL **: Unable to create user data directory '/root/.local/share' for storing the recently used files list: Permission denied
**
Gtk:ERROR:/build/buildd/gtk+3.0-3.10.8/./gtk/gtkrecentmanager.c:617:gtk_recent_manager_set_filename: assertion failed: (priv->filename != NULL)
Aborted


This issue does not occur on older libgtk version such as 3.4.2 (Debian Wheezy)
Even newer versions such as 3.12.4 (Debian Jessie) is also affected.

The severity is set to critical because a segmentation fault of a GTK application can be triggered by setting an environment variable.
If the home directory is not readable, a GTK application should never segfault, rather than catching the error.
Comment 1 Alexander Koeppe 2014-10-22 21:43:32 UTC
I've to correct myself: The application is not segfaulting but just aborting.
Comment 2 Alexander Koeppe 2014-12-24 23:30:20 UTC
The bug report has just been set to resolved w/o any comment.
In which version of gtk+3, this bugfix will be deployed / released?